- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    5.0.0 Beta 1
 - 
    None
 - 
    Windows only
 
- 
        420b62f2028d2331a729ef800b40dfc762d1613c
 
Steps to reproduce:
- Start Qt Creator against Qt 5 with -platform xcb or similar
 - Qt Creator help is shown.
 
Pending for review: https://codereview.qt-project.org/#change,25968
- relates to
 - 
                    
QTBUG-30330 Windows: assertion if you pass QApplication arguments that are not exactly those retrieved by GetCommandLine()
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-25724 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 26321,1 | QCoreApplication: No longer hardcode arguments to be filtered out. | master | qt/qtbase | Status: MERGED | +2 | 0 |